<resources>
    <string name="app_name">OneTimePad</string>
    <string name="app_launcher">OneTimePad</string>
    <string name="no_accounts">No accounts found, use the menu to add one</string>
    <string name="menu_qrcode">Show QR code</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_manual">Manual Entry</string>
    <string name="menu_change_pass">Change Password</string>
    <string name="menu_scan">Scan QR Code</string>
    <string name="menu_about">About</string>
    <string name="msg_invalid_qr_code">Invalid URI or QR Code</string>
    <string name="msg_account_added">Account added</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_ok">Ok</string>
    <string name="msg_confirm_delete">Are you sure you want do remove this account?</string>
    <string name="msg_account_removed">Account removed</string>
    <string name="button_add">Add</string>
    <string name="button_remove">Remove</string>
    <string name="alert_rename">Rename</string>
    <string name="alert_remove">Remove "%1$s"?</string>
    <string name="msg_camera_permission">Camera permission not granted</string>
    <string name="msg_clipboard_copied">One time pad copied to clipboard</string>
    <string name="msg_clipboard_updated">One time pad updated clipboard</string>
    <string name="msg_clipboard_no_paste">No valid URI found</string>
    <string name="manual_issuer_hints">Issuer Label</string>
    <string name="manual_secret_hints">Secret Code</string>
    <string name="msg_missing_secret">Secret Code is mandatory!</string>
    <string name="msg_clipboard_cleared">OTP clipboard expired</string>
    <string name="msg_password_prompt">Enter your password:</string>
    <string name="msg_new_password_prompt">Enter a passphrase for this application to encrypt your private data with:</string>
    <string name="hint_new_password">Passphrase</string>
    <string name="hint_new_password_confirm">Confirm passphrase</string>
    <string name="msg_remain_tries">%1$d attempts remaining</string>
    <string name="msg_try_again_failure">Too many failed attempts. Relaunch and try again.</string>
    <string name="msg_try_again_invalid">Valid password required. Relaunch and try again.</string>
    <string name="msg_try_again_unknown">OneTimePad is exiting due to: %1$s</string>
    <string name="msg_invalid_passwords">Passwords do not match or are less than 4 characters long.</string>
    <string name="msg_change_existing_pass">To change the password you will be first prompted for the existing password, once that is unlocked, you will be prompted for the new password.</string>
    <string name="msg_select_entry_first">Select the entry first, then tap to copy the one time pad.</string>
    <string name="msg_cancel_exit">OneTimePad is exiting now.</string>
    <string name="msg_unable_save">Unable to save entries due to missing or invalid password.</string>
    <string name="search_hint">Search</string>
    <string name="msg_search_nodrag">Cannot re-order while searching the list.</string>
    <string name="msg_extstore_err">Import/Export Error: External storage is not present, or is not writable.</string>
    <string name="msg_export_fail">Unable to export secrets; file copy failed.</string>
    <string name="msg_export_pass">Secrets exported to: %s</string>
    <string name="menu_export">Export Secrets</string>
    <string name="msg_import_fail">Unable to import secrets; file copy failed.</string>
    <string name="msg_import_pass">Secrets imported from: %1$s</string>
    <string name="menu_import">Import</string>
    <string name="msg_remove_backup_pls">Please rename or remove the backup and launch the app again.</string>
</resources>
