<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_manual"
        android:orderInCategory="100"
        android:title="@string/menu_manual"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:title="@string/menu_scan"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_pass"
        android:orderInCategory="100"
        android:title="@string/menu_change_pass"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu>
