<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <item
        android:id="@+id/action_qrcode"
        android:orderInCategory="100"
        android:icon="@drawable/ic_visibility_white_36dp"
        app:showAsAction="ifRoom"
        android:title="@string/menu_qrcode" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_mode_edit_white_36dp"
        android:orderInCategory="100"
        android:title="@string/menu_edit" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="101"
        android:icon="@drawable/ic_delete_white_36dp"
        app:showAsAction="ifRoom"
        android:title="@string/menu_delete" />
</menu>
